--- a/Codecks.uplugin
+++ b/Codecks.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 3,
 	"Version": 0,
-	"VersionName": "1.0",
+	"VersionName": "1.1",
 	"FriendlyName": "Codecks",
 	"Description": "The official Codecks plugin.",
 	"Category": "Other",
@@ -18,6 +18,11 @@
 		{
 			"Name": "Codecks",
 			"Type": "Runtime",
+			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "CodecksEditor",
+			"Type": "Editor",
 			"LoadingPhase": "Default"
 		}
 	]
