--- a/Codecks.uplugin
+++ b/Codecks.uplugin
@@ -1,12 +1,12 @@
 {
 	"FileVersion": 3,
-	"Version": 0,
-	"VersionName": "1.1",
+	"Version": 1,
+	"VersionName": "1.5",
 	"FriendlyName": "Codecks",
-	"Description": "The official Codecks plugin.",
-	"Category": "Other",
-	"CreatedBy": "Maschinen-Mensch",
-	"CreatedByURL": "https://www.maschinen-mensch.com",
+	"Description": "Codecks reporting integration for UE supporting self hosting",
+	"Category": "Insights",
+	"CreatedBy": "Radovan Stastny",
+	"CreatedByURL": "https://peruncreative.com/",
 	"DocsURL": "",
 	"MarketplaceURL": "",
 	"SupportURL": "",
